<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_first_page_layout_dovız"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/activity_first_page_dovizTutarı"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/doviz_tutarı" />

    <EditText
        android:id="@+id/activity_first_page_dovizSigned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:enabled="false"
        android:hint="@string/hint_zero"
        android:inputType="numberSigned"
        android:maxLength="6"
        android:textAlignment="textEnd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comma"
        android:textAlignment="textEnd" />

    <EditText
        android:id="@+id/activity_first_page_dovizDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:enabled="false"
        android:hint="@string/double_zero"
        android:inputType="numberSigned"
        android:maxLength="2"
        android:textAlignment="textEnd" />


    <TextView

        android:id="@+id/activity_first_page_dovizIsmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/doviz_ismi" />


</LinearLayout>
