<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="androidedu.kodluyoruz.currencycalculate.FirstPage">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:entries="@array/items" />
    />
    <LinearLayout
        android:id="@+id/activity_first_page_layout_tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_first_page_tlTutarı"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/tl_tutarı" />

        <EditText
            android:id="@+id/activity_first_page_tlSigned"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:hint="@string/hint_zero"
            android:inputType="numberSigned"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/activity_first_page_comma1"
            android:layout_width="15dp"
            android:layout_height="50dp"
            android:text="@string/comma"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/activity_first_page__tlDecimal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:hint="@string/double_zero"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />


        <TextView

            android:id="@+id/activity_first_page_TL"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/tl_ismi" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_first_page_layout_dovız"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_first_page_dovizTutarı"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/doviz_tutarı" />

        <EditText
            android:id="@+id/activity_first_page_dovizSigned"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:hint="@string/hint_zero"
            android:inputType="numberSigned"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/activity_first_page_comma"
            android:layout_width="15dp"
            android:layout_height="50dp"
            android:text="@string/comma"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/activity_first_page_dovizDecimal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:hint="@string/double_zero"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />


        <TextView

            android:id="@+id/activity_first_page_dovizIsmi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/doviz_ismi" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/activity_first_page_passNext"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </LinearLayout>


    <Button
        android:id="@+id/activity_first_page_buttonchangecurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_currency"
        android:textAlignment="center" />

</LinearLayout>
